# ispc-gpc-2024

./: .gitignore  CMakeLists.txt  LICENSE  README.md
part_1/: CMakeLists.txt  part_1.h  part_1.ispc  part_1_benchmark.cpp
part_2/: CMakeLists.txt  part_2.h  part_2.ispc  part_2_benchmark.cpp  vector3.cpp  vector3.h
tests/: CMakeLists.txt  tests.cpp
